Bug/642: Adjust daily accrual (#1727)